# honeyclaw

./: .gitignore  CONTRIBUTING.md  EXECUTION-LOG.md  FIXES-AND-IMPROVEMENTS.md  IMPROVEMENTS.md  MERGE-PLAN.md  PLAN.md  PLANNING-NOTES.md  README.md  REVIEW-2026-02-08.md  SECURITY-AUDIT-2026-02-07.md  SKILL.md  TEST-PLAN.md  pyproject.toml  requirements-mesh.txt  requirements.txt
billing/: PRICING.md  TOKENOMICS.md  payment-flow.md  wallet-setup.md
bot/: .env.example  README.md  commands.md  handler.js  package.json
ctf/: README.md  challenge-config.json  flags.md
dashboard/replay/: index.html  player.js  style.css
deploy/apparmor/: honeyclaw-api.profile  honeyclaw-enterprise.profile  honeyclaw-ssh.profile
deploy/flyio/: deploy.sh  fly.toml  (+4 more)
docs/: ARCHITECTURE.md  COUNCIL-ARCHITECTURE.md  COUNCIL-DOCS.md  COUNCIL-SECURITY.md  DEPLOYMENT.md  DIRECT-TEST-RESULTS.md  ENRICHMENT.md  ESCAPE-DETECTION.md  FEEDBACK-REPORT.md  FINAL-REVIEW-SUMMARY.md  FINGERPRINTING.md  FLEET-FEEDBACK.md  IMPROVEMENT-PLAN.md  IMPROVEMENTS.md  REPLAY.md  reporting.md
examples/: recording_ssh_honeypot.py
legal/: honeypot-legality-disclaimer.md  llc-draft.md  privacy-policy.md  terms-of-service.md
marketing/: README.md  launch-thread.md  logo-brief.md
research/: RESEARCH-SUMMARY.md  competitor-analysis.md  safe-mimicry-patterns.md  threat-model.md
reviews/: expert-1-offensive.md  expert-2-defensive.md  expert-3-devops.md  expert-4-deception.md
scripts/: deploy-mesh.sh  mesh-entrypoint.sh  verify-isolation.sh
siem-rules/: README.md
src/: deploy-honeypot.sh
templates/: Dockerfile.mesh  mesh-fly.toml
test-results/: attack-sim.md  evasion.md  functional.md  input-validation.md  logging.md  operational.md  protocol.md  rate-limiting.md  test_input_validation.py
tests/: test_correlation.py  test_geoip.py  test_immutable_logging.py  test_incentive.py
(+208 files in other folders)
