[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeyclaw"
version = "1.0.0"
description = "SSH/HTTP Honeypot Framework with Session Recording and Replay"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Honeyclaw Team"}
]
keywords = ["honeypot", "security", "ssh", "http", "replay"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "asyncssh>=2.14.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.26.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
honeyclaw = "src.cli.main:main"

[project.urls]
Homepage = "https://github.com/honeyclaw/honeyclaw"
Documentation = "https://honeyclaw.io/docs"
Repository = "https://github.com/honeyclaw/honeyclaw"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*", "templates*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
